footer: estructura de los  controles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!--Estructura de la barra superior -->
     <div class="barra_superior">
         <header class="Menu_superior">
             <div>
@@ -25,7 +26,7 @@
             </button>
         </header>
     </div>
-
+    <!--Estructura del Menu izquierdo-->
     <nav class="menu">
         <div>
             <div>
@@ -78,18 +79,111 @@
             <div>
                 <a href="">
                     <div>
-                        <img  class="img-caratula" src="https://i.scdn.co/image/ab67616d0000b2733b57e2257933b78b7292de23" alt="">
+                        <img class="img-caratula" src="https://i.scdn.co/image/ab67616d0000b2733b57e2257933b78b7292de23"
+                            alt="">
                     </div>
                 </a>
-
-                <button aria-label="Plegar" aria-expanded="fal"><span
-                        class="material-icons md-16">keyboard_arrow_down</span></button>
+                <button aria-label="Plegar" aria-expanded="fal">
+                    <span class="material-icons md-16">keyboard_arrow_down</span>
+                </button>
             </div>
         </div>
     </nav>
+    <!--Footer:  controles -->
+    <div>
+        <footer>
+            <!--div 1: Información de la cancion -->
+            <div>
+                <div>
+                    <a href="">
+                        <div>
+                            <img class="img-minicaratula"
+                                src="https://i.scdn.co/image/ab67616d0000b2733b57e2257933b78b7292de23" alt="">
+                        </div>
+                    </a>
+                    <button aria-label="Plegar" aria-expanded="fal">
+                        <span class="material-icons md-16">keyboard_arrow_down</span>
+                    </button>
+                </div>
+                <div>
+                    <div>
+                        <span>
+                            <a href="">Nombre de la canción</a>
+                        </span>
+                    </div>
+                    <div>
+                        <span>
+                            <a href="">Artista</a>
+                        </span>
+                    </div>
+                </div>
+                <button>
+                    <span class="material-icons md-16">favorite_border</span>
+                </button>
+            </div>
+            <!--div 1: Controles de reproducción -->
+            <div>
+                <div>
+                    <div>
+                        <button>
+                            <span class="material-icons md-16">shuffle</span>
+                        </button>
+                        <button>
+                            <span class="material-icons md-16">skip_previous</span>
+                        </button>
+                    </div>
+                    <button>
+                        <span class="material-icons md-16">pause</span>
+                    </button>
+                    <div>
+                        <button>
+                            <span class="material-icons md-16">skip_next</span>
+                        </button>
+                        <button>
+                            <span class="material-icons md-16">repeat</span>
+                        </button>
+                    </div>
+                </div>
+                <div>
+                    <div>00:00</div>
+                    <div>
+                        <input type="range" min="0" max="325" step="5" aria-valuetext="" value="265">
+                    </div>
+                    <div>3:00</div>
+                </div>
+            </div>
+            <!--div 1: volumen y otras opciones -->
+            <div>
+                <button>
+                    <span class="material-icons md-16">auto_fix_normal</span>
+                </button>
+                <div>
+                    <button>
+                        <span class="material-icons md-16">horizontal_split</span>
+                    </button>
+                </div>
+                <div>
+                    <button>
+                        <span class="material-icons md-16">speaker</span>
+                    </button>
+                </div>
+                <div>
+                    <button>
+                        <span class="material-icons md-16">volume_up</span>
+                    </button>
+                    <div>
+                        <input type="range" min="0" max="1" step="0.1">
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <!--Area Principal -->
+    <div>
+        
+    </div>
 
-
-
+    <!--Menu contextual de la barra superior -->
     <div>
         <ul>
             <li>
