Estilos de la barra superior

--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
             <!--Estructura de la barra superior -->
             <div class="barra-superior">
                 <header class="Menu_superior">
-                    <div>
-                        <button class="btn_nav"><span class="material-icons md-16 md-light">chevron_left</span></button>
+                    <div class="btn-navegacion">
+                        <button class="btn_nav"><span class="material-icons md-16 md-light">arrow_back_ios</span></button>
                         <button class="btn_nav"><span
-                                class="material-icons md-16 md-light">chevron_right</span></button>
+                                class="material-icons md-16 md-light">arrow_forward_ios</span></button>
                     </div>
-                    <button>Mejora tu cuenta</button>
-                    <button>
-                        <span class="material-icons md-16">person</span>
+                    <div class="norte-espacio1"></div>
+                    <div class="norte-espacio2"></div>
+                    <button class="btn_premium" title="Mejora tu cuenta" aria-label="Mejora tu cuenta"> Mejora tu cuenta</button>
+                    <button class="btn_usuario">
+                        <div class="user">
+                            <span class="material-icons md-16">person</span>
+                        </div>
+                        
                         Usuario
-                        <span class="material-icons md-16">expand_less</span>
+                        <span class="material-icons md-16 triangulo">play_arrow</span>
                     </button>
                 </header>
             </div>
@@ -83,7 +88,7 @@
                         <a href="">
                             <div>
                                 <img class="img-caratula"
-                                    src="https://i.scdn.co/image/ab67616d0000b2733b57e2257933b78b7292de23" alt="">
+                                    src="https://i.scdn.co/image/ab67616d000048512fb855430bbc5abe85e04e31" alt="">
                             </div>
                         </a>
                         <button aria-label="Plegar" aria-expanded="fal">
@@ -105,7 +110,7 @@
                                 <a href="">
                                     <div class="icon">
                                         <img class="img-minicaratula"
-                                            src="https://i.scdn.co/image/ab67616d0000b2733b57e2257933b78b7292de23"
+                                            src="https://i.scdn.co/image/ab67616d000048512fb855430bbc5abe85e04e31"
                                             alt="">
                                     </div>
                                 </a>
